# codefix-env

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  SECURITY.md  codefix_env_architecture.html  openenv.yaml  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker-publish.yml  publish.yml
codefix_env/server/: codefix_environment.py
docs/: api_reference.md  quickstart.md
examples/: basic_usage.py  benchmark.py  grpo_training.py
examples/notebooks/: quickstart.ipynb
first/: README.md  inference.py  openenv.yaml  setup.py  test_reset.py
first/codefix_env/server/: app.py  codefix_environment.py  requirements.txt
first/server/: app.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx
frontend/src/api/: codefixApi.js
frontend/src/components/: ActionPanel.jsx  Header.jsx  HealthStatus.jsx  OutputPanel.jsx  TaskList.jsx  Workspace.jsx
scripts/: mine_tasks.py  run_baseline_eval.py
server/: Dockerfile  app.py  codefix_environment.py  requirements.txt
src/codefix_env/: __init__.py  cli.py  client.py  env.py  models.py  rewards.py
src/codefix_env/tasks/: __init__.py  easy.py  hard.py  medium.py
src/codefix_env/tasks/cpp/: easy.py
src/codefix_env/utils/: __init__.py  metrics.py  result_types.py  reward_model.py  sandbox.py
src/codefix_env/utils/executors/: __init__.py  base.py  cpp_executor.py  python_executor.py
tests/: conftest.py  test_env.py  test_rewards.py  test_tasks.py
