[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codefix-env"
version = "0.2.0"
description = "A high-performance PyTorch-based RL environment for automated code debugging and LLM agent evaluation"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Shailendra Dhakar", email = "dhakarshailendra829@gmail.com" }]
keywords = ["reinforcement-learning", "pytorch", "llm", "code-debugging", "gymnasium", "openenv", "rl-environment", "genai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "torch>=2.2.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-timeout>=2.3.0",
    "ruff>=0.4.0",
    "black>=24.3.0",
    "isort>=5.13.0",
    "mypy>=1.9.0",
    "pre-commit>=3.7.0",
    "httpx>=0.27.0",
]
llm = [
    "transformers>=4.40.0",
    "trl>=0.8.6",
    "accelerate>=0.29.0",
    "datasets>=2.19.0",
    "sentencepiece>=0.2.0",
]
all = ["codefix-env[dev,llm]"]

[project.urls]
Homepage = "https://github.com/dhakarshailendra829/codefix-env"
Repository = "https://github.com/dhakarshailendra829/codefix-env"
Issues = "https://github.com/dhakarshailendra829/codefix-env/issues"

[project.scripts]
codefix-server = "codefix_env.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]
skip-magic-trailing-comma = false

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 60
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/codefix_env"]
omit = ["*/tests/*", "*/examples/*"]